Add description box to login.html

--- a/transcribe_script/templates/registration/login.html
+++ b/transcribe_script/templates/registration/login.html
@@ -101,6 +101,10 @@
 </head>
 <body>
     <div class="container">
+        <div class="description-box">
+            <h3>Welcome to Transcripio</h3>
+            <p>Transcribe your audio and video files. Upload your media, and get transcripts in seconds.</p>
+        </div>
         <h2>Log In</h2>
         <form method="post">
             {% csrf_token %}
