Add support for MKV files

--- a/transcribe_script/templates/transcribe_script/upload.html
+++ b/transcribe_script/templates/transcribe_script/upload.html
@@ -94,7 +94,7 @@
                             <span class="font-semibold text-emerald-600">Click to upload</span> or drag and drop
                         </p>
                         <p class="text-xs text-gray-500" id="file-name">
-                            MP4, MP3, WAV, M4A, WebM, MPEG
+                            MP4, MP3, WAV, M4A, WebM, MPEG, MKV
                         </p>
                     </div>
                 </div>
