Add ability to upload MKV files

--- a/transcribe_script/templates/transcribe_script/upload.html
+++ b/transcribe_script/templates/transcribe_script/upload.html
@@ -133,7 +133,7 @@
     
     <script>
         function updateFileName(input) {
-            const fileName = input.files[0]?.name || 'MP4, MP3, WAV, M4A, WebM, MPEG';
+            const fileName = input.files[0]?.name || 'MP4, MP3, WAV, M4A, WebM, MPEG, MKV';
             document.getElementById('file-name').textContent = fileName;
         }
     </script>
